Refatoração: FindAthleteResponsibleByCpfController e (Swagger)
