# src/modules/athletes/controllers/FindAthleteResponsibleByCpfController.ts
@@ -1,6 +1,7 @@
 import { Request, Response } from "express";
 import { container } from "tsyringe";
 import { FindAthleteResponsibleByCpfUseCase } from "../useCases/findAthleteResponsibleByCpf/FindAthleteResponsibleByCpfUseCase";
+import { FindAddressByIdUseCase } from "../../address/useCases/findAddressById/FindAddressByIdUseCase";
 
 
 class FindAthleteResponsibleByCpfController {
@@ -10,10 +11,30 @@ class FindAthleteResponsibleByCpfController {
         const cpf = request.params.cpf;
 
         const findAthleteResponsibleByCpfUseCase = container.resolve(FindAthleteResponsibleByCpfUseCase);
+        const findAddressByIdUseCase = container.resolve(FindAddressByIdUseCase);
 
         const athleteResponsible = await findAthleteResponsibleByCpfUseCase.execute(cpf);
+        const address = await findAddressByIdUseCase.execute(athleteResponsible.addressId);
 
-        return response.status(200).json(athleteResponsible);
+        const dataAthleteResponsible = {
+            name: athleteResponsible.name,
+            cpf: athleteResponsible.cpf,
+            rg: athleteResponsible.rg,
+            gender: athleteResponsible.gender,
+            email: athleteResponsible.email,
+            phoneNumber: athleteResponsible.phoneNumber,
+            profession: athleteResponsible.profession,
+            maritalStatus: athleteResponsible.maritalStatus,
+            address: {
+                street: address.street,
+                number: address.number,
+                city: address.city,
+                state: address.state,
+                cep: address.cep,
+            }
+        };
+
+        return response.status(200).json(dataAthleteResponsible);
     }
 }
 
